sort.basic.bubble.AlgBubbleSort3.scala.error
Compilation error:
AlgBubbleSort3:15: error: not found: value getNombreValeur
      if (getNombreValeur()-i-1 == compt){
          ^